refactor: added class to Breadcrumbs wrapper

--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -537,6 +537,11 @@
     margin-bottom: 20px;
   }
 
+  .breadcrumbsWrapper {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
   .contentWrapper:hover,
   .buyWrapper:hover,
   .carouselWrapper:hover,
