--- a/src/pages/main/categorylist/products/card/card.module.scss
+++ b/src/pages/main/categorylist/products/card/card.module.scss
@@ -78,7 +78,6 @@
   width: 100%;
   height: 38px;
   padding: 5px;
-  // background: linear-gradient(to right, #e6dedf, rgb(125, 142, 16));
   background-color: rgba(66, 162, 236, 0.8);
   color: #fff;
   font-weight: 700;
@@ -89,6 +88,15 @@
 
   span {
     margin-left: 5px;
+  }
+
+  .cartFill {
+    justify-self: start;
+
+    .shoppingCart {
+      width: 25px;
+      height: 25px;
+    }
   }
 
   .cartIcon {
@@ -105,7 +113,7 @@
     background: green;
     color: rgb(164, 197, 21);
     padding: 5px;
-    margin-left: 40px;
+    margin-left: 20px;
   }
 
   .discountPrice,
@@ -162,7 +170,20 @@
   .cardTitle {
     font-size: 1rem;
   }
+
+  .discountPrice,
+  .discountPriceCurrency {
+    font-size: 1.2em;
+  }
 }
+
+@media (max-width: 700px) {
+  .discountPrice,
+  .discountPriceCurrency {
+    font-size: 0.8rem;
+  }
+}
+
 @media screen and (max-width: 608px) {
   .card {
     width: 90%;
